@@ -33,7 +33,7 @@
     <parent>
         <groupId>org.jboss</groupId>
         <artifactId>jboss-parent</artifactId>
-        <version>16</version>
+        <version>26</version>
     </parent>
 
     <licenses>
@@ -46,6 +46,9 @@
 
     <properties>
         <version.org.byteman>3.0.10</version.org.byteman>
+        <version.org.jboss.modules>1.6.0.Final</version.org.jboss.modules>
+        <version.junit>4.12</version.junit>
+
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
@@ -54,7 +57,7 @@
         <dependency>
             <groupId>org.jboss.modules</groupId>
             <artifactId>jboss-modules</artifactId>
-            <version>1.3.1.Final</version>
+            <version>${version.org.jboss.modules}</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
@@ -92,7 +95,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -114,6 +117,7 @@
                     <excludes>
                         <exclude>**/SyslogTest.java</exclude>
                     </excludes>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
                     <systemPropertyVariables>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <test.log.dir>${project.build.directory}${file.separator}logs${file.separator}</test.log.dir>
